@@ -1,3 +1,5 @@
+* Make global cache depends on explicit context keys
+* Don't add to global cache Binary fields
 * Add MachMixin
 * Remove context, current_date and time from record rule evaluation
 
